[package]
name = "listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hex = "0.4"
rustls = "0.20"
serde_json = "1"
serde_derive = "1"
hyper-rustls = "0.23"
async-recursion = "1"
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
